# credit-card-fraud-detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
.virtual_documents/notebooks/: Untitled.ipynb  training.ipynb
localstack_data/cache/: machine.json
mlruns/0/: meta.yaml
mlruns/1/: meta.yaml
mlruns/1/2577942e1a3d48589b3b6fa998b82b49/: meta.yaml
mlruns/1/2577942e1a3d48589b3b6fa998b82b49/artifacts/fraud_model/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
mlruns/1/2577942e1a3d48589b3b6fa998b82b49/metrics/: PR-AUC  ROC-AUC
mlruns/1/2577942e1a3d48589b3b6fa998b82b49/tags/: mlflow.log-model.history
mlruns/1/dc93cc3e2df54d9b9802b0163e29bfe5/: meta.yaml
mlruns/1/dc93cc3e2df54d9b9802b0163e29bfe5/artifacts/fraud_model/: MLmodel  model.xgb
mlruns/1/dc93cc3e2df54d9b9802b0163e29bfe5/metrics/: PR-AUC  ROC-AUC
mlruns/1/dc93cc3e2df54d9b9802b0163e29bfe5/tags/: mlflow.log-model.history  mlflow.source.git.commit
mlruns/2/: meta.yaml
mlruns/2/283d269735a744b292bae5dd40615848/: meta.yaml
mlruns/2/283d269735a744b292bae5dd40615848/metrics/: PR-AUC  ROC-AUC
mlruns/2/283d269735a744b292bae5dd40615848/tags/: mlflow.log-model.history  mlflow.source.git.commit
models/: xgboost_fraud_model.json
notebooks/: training.ipynb
src/: app.py  monitor.py  predict.py  train.py
terraform/: main.tf  outputs.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
tests/: test_data_processing.py  test_prediction.py
