[project]
name = "credit-card-fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.137.0",
    "matplotlib>=3.11.0",
    "mlflow>=1.27.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.49.0",
    "xgboost>=3.2.0",
]
